Added sandbox key in environment file

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-# .env
+#unique sandbox key:
+KEY= kpl22-nifi
+
 NIFI_USERNAME=admin
 #minimum password length is 12 characters
 NIFI_PASSWORD=ctsBtRBKHRAx69EqUghvvgEvjnaLjFEB
