Added support for dynamic web https ports

--- a/.env
+++ b/.env
@@ -1,8 +1,11 @@
-#unique sandbox key:
+# Unique sandbox key:
 KEY= kpl22-nifi
 
+# Example: access nifi at: https://localhost:9090
+NIFI_WEB_HTTPS_PORT=9090
+
 NIFI_USERNAME=admin
-#minimum password length is 12 characters
+# Minimum password length is 12 characters
 NIFI_PASSWORD=ctsBtRBKHRAx69EqUghvvgEvjnaLjFEB
 
 MYSQL_ROOT_USER=root
@@ -13,5 +16,5 @@ MYSQL_PASSWORD=nifi
 MYSQL_PORT=3321
 PHPMYADMIN_PORT=33395
 
-# path to mysql connector for java
+# Path to mysql connector for java
 MYSQL_CONNECTOR_PATH=/home/kpl22/drivers/mysql-connector-j-9.3.0/mysql-connector-j-9.3.0.jar
